# CodeFab-4

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  codecov.yml  factory  pyproject.toml  streamlit_adventure.py  streamlit_app.py  visualize.py
.github/: pull_request_template.md
.streamlit/: config.toml
codefab/: array_nodes.py  ast_nodes.py  checker.py  cli.py  error.py  executor_unit.py  function_checker.py  function_executor.py  function_interpreter.py  interpreter.py  module_loader.py  optimized_interpreter.py  optimizer.py  resolver.py  tokenizer.py  tokens.py  visitor.py
docs/: CodeFab_발표자료_초안.pptx  best_practices.md  issue-class-method-return-signal-leak.md  language.md  미구현기능_및_버그_TODO.md  테스트케이스.md  함수_요구사항_추적성.md  함수_클래스_배열_가져오기_테스트.md
scripts/: adventure.laugh  hello.txt  test.txt  test_debug.laugh
tests/: test_array.py  test_assembler.py  test_call_expression_parser.py  test_checker.py  test_class_checker.py  test_class_executor.py  test_class_integration.py  test_class_parser.py  test_class_tokenizer.py  test_cli.py  test_cli_integration.py  test_debug.py  test_executor_unit.py  test_expression_parser.py  test_function_assembler.py  test_function_checker.py  test_function_executor.py  test_function_interpreter.py  test_function_statement_parser.py  test_import_integration.py  test_interpreter.py  test_module_loader.py  test_optimized_executor_unit.py  test_optimized_interpreter.py  test_optimizer.py  test_repl.py  test_repl_integration.py  test_resolver.py  test_statement.py  test_token.py  test_tokenizer.py  test_tokens.py  test_visitor_sync.py
(+176 files in other folders)
