[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "codefab"
authors = [{name = "Bug Hunters 4", email = "kimbyungnam@ajou.ac.kr"}]
readme = "README.md"
requires-python = ">= 3.13"
version = "0.30.2"
description = "CodeFab Interpreter Project"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.20",
    "pre-commit>=4.6.0",
    "commitizen>=4.16.4",
]

test = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
]

build = [
    "flit>=3.12.0",
]

[project.scripts]
codefab = "codefab.common.cli:main"

[project.urls]
Home = "https://github.com/kimbyungnam/CodeFab-4"
